<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.the-h-team.my-essentials</groupId>
    <artifactId>myessentials</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <modules>
        <module>myEssentials-plugin</module>
        <module>myEssentials-addons</module>
        <module>myEssentials-api</module>
    </modules>
    <packaging>pom</packaging>
    <!-- Guide to import submodules with Jitpack: -->
    <!-- groupId = com.github.the_h_team.myEssentials (Normal username syntax+Repo name) -->
    <!-- artifactId = any of [my-essentials,my-essentials-api,my-essentials-addons,my-essentials-events] -->

    <!-- if normal com.github.the_h_team:myEssentials format is used it's an artifact of all components -->
    <!-- I have no idea if that's functional though, safest bet is the my-essentials (plugin) submodule -->

    <name>myEssentials</name>
    <url>https://github.com/the-h-team/myEssentials</url>
    <description>myEssentials. Quality of life, revived.</description>
    <inceptionYear>2021</inceptionYear>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <labyrinth.version>1.7.9</labyrinth.version>
    </properties>

    <licenses>
        <license>
            <name>GNU General Public License v3.0 or later</name>
            <url>https://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Sanctum</name>
        <url>https://github.com/the-h-team</url>
    </organization>

    <developers>
        <developer>
            <id>ms5984</id>
            <name>Matt</name>
            <url>https://github.com/ms5984</url>
        </developer>
        <developer>
            <id>Hempfest</id>
            <name>Hempfest</name>
            <url>https://github.com/Hempfest</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/the-h-team/myEssentials.git</connection>
        <developerConnection>scm:git:ssh://github.com:the-h-team/myEssentials.git</developerConnection>
        <url>http://github.com/the-h-team/myEssentials/tree/master</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>s01-sonatype-snapshots</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.the-h-team.Labyrinth</groupId>
            <artifactId>labyrinth-common</artifactId>
            <version>${labyrinth.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.the-h-team.Labyrinth</groupId>
            <artifactId>labyrinth-gui</artifactId>
            <version>${labyrinth.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.the-h-team.Labyrinth</groupId>
            <artifactId>labyrinth-placeholders</artifactId>
            <version>${labyrinth.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.the-h-team.Labyrinth</groupId>
            <artifactId>labyrinth-perms</artifactId>
            <version>${labyrinth.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.the-h-team.Labyrinth</groupId>
            <artifactId>labyrinth-regions</artifactId>
            <version>${labyrinth.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.the-h-team.Labyrinth</groupId>
            <artifactId>labyrinth-skulls</artifactId>
            <version>${labyrinth.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.the-h-team</groupId>
            <artifactId>LocationAPI</artifactId>
            <version>1.0_R1</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>20.1.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <!-- This profile adds the current commit hash to every artifact in the project. -->
            <!-- In theory, this should allow you to inspect the produced jar and be able
             to better tell what commit it was generated from. -->
            <id>jitpack-build</id>
            <activation>
                <property>
                    <name>env.JITPACK</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <!--suppress MavenModelInspection -->
                <finalName>${project.artifactId}-${project.version}-${env.GIT_COMMIT}</finalName>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.2.0</version>
                        <configuration>
                            <doclint>none</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- GitHub Actions deployment -->
            <id>deploy</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.8</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.2.0</version>
                        <configuration>
                            <doclint>missing,reference,syntax</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <!-- Prevent `gpg` from using pinentry programs -->
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
